# boorukits

./: .flake8  .gitignore  README.md  requirements.txt  setup.cfg  setup.py
.github/: FUNDING.yml
.github/workflows/: lint.yml  pytest.yml  upload-pypi.yml
src/boorukits/: __init__.py  booru.py  danbooru.py  gelbooru.py  konachan.py  safebooru.py
tests/: test_booru.py  test_danbooru.py  test_gelbooru.py  test_konachan.py  test_safebooru.py  utils.py
