[metadata]
name = boorukits
version = 0.0.3
description = boorukits is an unofficial asynchronous library for the APIs of booru-like gallery (eg. Danbooru/Moebooru).
url = https://github.com/MaikoTan/boorukits
project_urls = 
    Documentation = https://github.com/MaikoTan/boorukits
    Source Code = https://github.com/MaikoTan/boorukits
long_description = file: README.md
long_description_content_type = text/markdown
author = Maiko Tan
author_email = maiko.tan.coding@gmail.com
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Framework :: AsyncIO
    License :: OSI Approved :: MIT License
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

platforms = nt, posix, os2

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
package_dir =
    boorukits = src/boorukits
install_requires = aiohttp>=3.6.2

[options.packages.find]
where = src

[yapf]
based_on_style = google

# The style for continuation alignment. Possible values are:
#
# - SPACE: Use spaces for continuation alignment. This is default behavior.
# - FIXED: Use fixed number (CONTINUATION_INDENT_WIDTH) of columns
#   (ie: CONTINUATION_INDENT_WIDTH/INDENT_WIDTH tabs or
#   CONTINUATION_INDENT_WIDTH spaces) for continuation alignment.
# - VALIGN-RIGHT: Vertically align continuation lines to multiple of
#   INDENT_WIDTH columns. Slightly right (one tab or a few spaces) if
#   cannot vertically align continuation lines with indent characters.
continuation_align_style=FIXED

# Indent width used for line continuations.
continuation_indent_width=4

# Require multiline dictionary even if it would normally fit on one line.
# For example:
#
#   config = {
#       'key1': 'value1'
#   }
force_multiline_dict=True
